
2020-01-12 Simon Sobisch <simonsobisch@gnu.org>

	* general: bug #513 (partial) added sync-left-right

2020-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* general: added options assign-variable, assign-using-variable,
	  assign-ext-dyn and assign-disk-from.

2020-01-01 Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #193 added same-as-clause

2019-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* general: changed assign-clause directives to use more descriptive
	  dynamic/external instead of mf/ibm.
	* general: added option implicit-assign-dynamic-var.

2019-09-30  Edward Hart <edward.dan.hart@gmail.com>

	* realia.words: Removed words belonging to other dialects - word list
	  now matches REALIA6.

2019-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* realia.conf, realia-strict.conf, realia.words, Makefile.am: added
	  dialect for CA Realia II.

2019-09-26  Ron Norman <rjn@inglenet.com>

	* general: added option reference-bounds-check

2019-09-22  Ron Norman <rjn@inglenet.com>

	* general: added option report-column-plus

2019-08-11 Simon Sobisch <simonsobisch@gnu.org>

	* general: added option hp-octal-literals

2019-06-08 Simon Sobisch <simonsobisch@gnu.org>

	* general: removed options json-generate and xml-generate (support is
	  now only depending on the reserved words)

2019-06-02 Simon Sobisch <simonsobisch@gnu.org>

	* general: added option records-mismatch-record-clause

2019-05-30 Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #311 added options call-convention-mnemonic and
	  call-convention-linkage

2019-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* default.conf, lax.conf-inc, mf-strict, rm-strict.conf:
	  increased word-length to 63 per COBOL 202x

2019-04-07 Simon Sobisch <simonsobisch@gnu.org>

	* general: FR #354 added continue-after option, set to ok
	  for default/lax only as we won't have a dialect file for COBOL 202x
	  until its final working draft and release date is available
