@@ -325,6 +325,15 @@
 #          Default:  .  (current directory)
 #          Example:  FILE_DICTIONARY_PATH ${HOME}/mystuff
 
+# Environment name:  COB_BDB_BYTEORDER
+#   Parameter name:  bdb_byteorder
+#          Purpose:  Defines the byte order to be used for BDB
+#             Type:  native        - use the system byte order
+#                    big-endian    - use big-endian order
+#                    little-endian - use little-endian order
+#          Default:  native
+#          Example:  bdb_byteorder big-endian
+
 # Environment name:  COB_LS_FIXED
 #   Parameter name:  ls_fixed
 #          Purpose:  Defines if LINE SEQUENTIAL files should be fixed length
